# lightwalletd-rs

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  build.rs  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
contrib/: smoke-test.sh
contrib/bench/: .dockerignore  README.md  docker-compose.bench.yml  go-lwd.Dockerfile
contrib/bench/data/: .gitignore
contrib/bench/ghz/: Dockerfile
contrib/bench/go-lwd/: benchstart.go
contrib/bench/mock-rpc/: Dockerfile  server.py
contrib/bench/profiles/: dense.env  light.env
contrib/bench/results/: .gitignore  mainnet-2026-07-phase2.md  mainnet-2026-07-summary.md  rss-bench-2026-07.md  rss-parity-2026-07.md
contrib/bench/scripts/: aggregate.py  extract-dataset.sh  plot.py  populate.sh  run-bench.sh
docker/: zebrad.toml
docs/: ARCHITECTURE.md  protocol-references.md
docs/decisions/: 0001-backend-zebrad-over-zcashd.md  0002-parse-blocks-with-librustzcash.md  0003-compute-txids-locally.md  0004-redb-block-cache.md  0005-shared-mempool-monitor.md  0006-darkside-mock-via-noderpc-seam.md  0007-noderpc-seam.md  0008-library-plus-binary.md  0009-service-per-method-family-modules.md  0010-node-error-grpc-mapping.md  0011-up-front-input-validation.md  0012-tls-default-insecure-flags.md  0013-resource-limits.md  0014-cache-ingestor-resilience.md  0015-layered-testing-strategy.md  0016-test-placement-by-visibility.md  0017-benchmark-methodology.md  0018-parse-time-branch-id-hardcoded.md  0019-pin-librustzcash-prereleases-nu63.md  0020-windowed-ingest-batched-commits.md  0021-mempool-staleness-contract.md  0022-ops-surface-parity.md  0023-zebra-readstate-backend.md  README.md
docs/design/: zebra-readstate-backend.md
proto/: compact_formats.proto  darkside.proto  service.proto
src/: cache.rs  compact.rs  config.rs  darkside.rs  encoding.rs  fetch.rs  filter.rs  ingestor.rs  lib.rs  main.rs  metrics.rs  proto.rs  service.rs  testutil.rs
src/darkside/: block.rs  error.rs  mod.rs  node.rs  service.rs  state.rs  tests.rs
src/node/: mod.rs  readstate.rs  types.rs
src/service/: address.rs  blocks.rs  chain.rs  errors.rs  mempool.rs  mempool_monitor.rs  mod.rs  ping.rs  subtrees.rs  tests.rs  transactions.rs  treestate.rs
src/service/tests/: address.rs  blocks.rs  chain.rs  mod.rs  ping.rs  subtrees.rs  transactions.rs  treestate.rs
testdata/: compact_blocks.json
testdata/tx_v6/: cb_4134000.hex  cb_4134683.hex
tests/: address.rs  basic_reorg_vector.rs  mempool.rs  reflection.rs  reorg.rs  send_tx.rs  sync.rs  trees.rs
tests/common/: mod.rs
