[package]
name = "lightwalletd-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A Rust implementation of lightwalletd, the gRPC backend that serves Zcash blockchain data to shielded light wallets."
repository = "https://github.com/jpgonzalezra/lightwalletd-rs"
readme = "README.md"
rust-version = "1.96"
keywords = ["zcash", "lightwalletd", "grpc", "light-client"]
publish = false

[dependencies]
anyhow = "1.0.102"
async-stream = "0.3.6"
async-trait = "0.1.89"
axum = { version = "0.8.9", default-features = false, features = ["http1", "tokio"] }
clap = { version = "4.6.1", features = ["derive"] }
hex = "0.4.3"
prost = "0.14.4"
redb = "4.1.0"
reqwest = { version = "0.13.4", default-features = false, features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["net"] }
tonic = { version = "0.14.6", features = ["tls-ring"] }
tonic-prost = "0.14.6"
tonic_prometheus_layer = "0.3.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
zcash_address = "=0.13.0-pre.0"
zcash_encoding = "0.4.0"
zcash_primitives = "=0.29.0-pre.0"
zcash_protocol = "=0.10.0-pre.0"

[build-dependencies]
tonic-prost-build = "0.14.6"

[dev-dependencies]
proptest = "1.11.0"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["full", "test-util"] }
wiremock = "0.6"
