[package]
name = "lightwalletd-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A Rust implementation of lightwalletd, the gRPC backend that serves Zcash blockchain data to shielded light wallets."
repository = "https://github.com/jpgonzalezra/lightwalletd-rs"
readme = "README.md"
rust-version = "1.96"
keywords = ["zcash", "lightwalletd", "grpc", "light-client"]
publish = false

[dependencies]
anyhow = "1.0.102"
async-stream = "0.3.6"
async-trait = "0.1.89"
axum = { version = "0.8.9", default-features = false, features = ["http1", "tokio"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
hex = "0.4.3"
prost = "0.14.4"
rcgen = "0.14.8"
redb = "4.1.0"
reqwest = { version = "0.13.4", default-features = false, features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["net"] }
tonic = { version = "0.14.6", features = ["tls-ring"] }
tonic-prost = "0.14.6"
tonic-reflection = "0.14.6"
tonic_prometheus_layer = "0.3.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
zcash_address = "=0.13.0"
zcash_encoding = "0.4.0"
zcash_primitives = "=0.29.0"
zcash_protocol = "=0.10.0"
# The readstate backend (ADR 0023): in-process reads from a running zebrad's state.
zebra-chain = { version = "11.1.0", optional = true }
zebra-rpc = { version = "11.1.0", optional = true }
zebra-state = { version = "10.1.0", optional = true }
tower = { version = "0.5", optional = true }

[features]
default = []
# Serve reads from a co-located zebrad's state via zebra's ReadStateService
# (--backend readstate). Heavy: pulls RocksDB and the zebra crate tree.
readstate = ["dep:zebra-chain", "dep:zebra-rpc", "dep:zebra-state", "dep:tower"]

[build-dependencies]
tonic-prost-build = "0.14.6"

[dev-dependencies]
proptest = "1.11.0"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["full", "test-util"] }
wiremock = "0.6"
